[package]
name = "nmap-rust"
version = "0.1.0"
edition = "2021"
authors = ["Shiva Prasanth <kesavarapu.siva@gmail.com>"]
description = "Simple Nmap in rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.3.1"
rayon = "1.5.1"
clap = { version = "3.0", features = ["derive"] }
anyhow = {version = "1.0.52"}